--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:windowSoftInputMode="stateHidden|adjustResize"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.EvcilHayvanSahiplenme"
 
-        android:usesCleartextTraffic="true" >
+        >
 
 
 
